--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>FlobbyBird</title>
+    <title>FlobbyBird - Performace Test</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/game.css">
 
