--- a/beta.html
+++ b/beta.html
@@ -7,6 +7,7 @@
     <title>FlobbyBird</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/game.css">
+    <link rel="manifest" href="manifest.json">
 
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
   </head>
@@ -43,7 +44,7 @@
   <script>
     if('serviceWorker' in navigator)
     {
-      navigator.serviceWorker.register('/assets/js/sw.js');
+      navigator.serviceWorker.register("assets/js/sw.js");
     }
   </script>
 </html>
